--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             <summary class="kpi-card cursor-pointer flex justify-between items-center">
                                 <div>
                                     <h3 class="text-xl font-semibold text-black">Data</h3>
-                                    <p class="text-slate-600 mt-1">Detailed forecast data available for discussion if needed.</p>
+                                    <p class="text-slate-600 mt-1">Data available for discussion if needed.</p>
                                 </div>
                                 <span class="arrow text-2xl text-slate-500 transform transition-transform duration-200">&#9654;</span>
                             </summary>
